--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galaxy</title>
+    <title>sternen</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,7 +19,10 @@
     <script src="Engine/colliders.js"></script>
     <script src="Engine/components.js"></script>
     <script src="Engine/planet.js"></script>
-    <script src="Engine/explosion.js"></script>
+    <script src="Engine/fragments.js"></script>
+    <script src="game.js"></script>
     <script src="main.js"></script>
+
+    <script src="menu.js"></script>
 </body>
 </html>
