--- a/index.html
+++ b/index.html
@@ -13,13 +13,19 @@
     <script src="Utils/transform.js"></script>
     <script src="Utils/linkedList.js"></script>
     <script src="Utils/vectors.js"></script>
+
     <script src="Engine/engine.js"></script>
     <script src="Engine/renderer.js"></script>
+
     <script src="Engine/scene.js"></script>
     <script src="Engine/colliders.js"></script>
     <script src="Engine/components.js"></script>
+
+    <script src="Engine/audio.js"></script>
+
     <script src="Engine/planet.js"></script>
     <script src="Engine/fragments.js"></script>
+
     <script src="game.js"></script>
     <script src="main.js"></script>
 
